Kubernetes/Deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devsutest-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: devsutest
  template:
    metadata:
      labels:
        app: devsutest
    spec:
      volumes:
        - name: devsutest-vol
          persistentVolumeClaim:
            claimName: devsutest-pvc
      containers:
        - name: devsutest
          image: guelmisedwards/devsutest:203
          volumeMounts:
            - name: devsutest-vol
              mountPath: /app
          resources:
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: devsutest-service
spec:
  selector:
    app: devsutest
  ports:
    - nodePort: 30020
      port: 80
      targetPort: 8000
  type: NodePort
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devsutest-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/affinity: "cookie" 
    nginx.ingress.kubernetes.io/session-cookie-path: "/"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /api/(.*)
        pathType: Prefix
        backend:
          service:
            name: devsutest-service
            port:
              number: 80
